--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.26",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.5",
+    "throttle-debounce-ts": "^1.1.1",
     "typescript": "^4.9.5",
+    "use-immer": "^0.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
